force-app/main/default/objects/Slot__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Availability</label>
    <referenceTo>Availability__c</referenceTo>
    <relationshipName>SlotAvailability</relationshipName>
    <type>Lookup</type>
</CustomField>