force-app/main/default/objects/Slot__c/fields/IsBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blocked</label>
    <type>Checkbox</type>
</CustomField>