force-app/main/default/objects/Slot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Practitioner__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>